Fix: Links open new tab now.

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 						<p>Full Stack Intern &nbsp;&bull;&nbsp; Coder/Gamer &nbsp;&bull;&nbsp; Never Give Up.</p>
 						<nav>
 							<ul>
-								<li><a href="https://www.linkedin.com/in/dexterpuru/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-								<li><a href="https://github.com/dexterpuru" class="icon brands fa-github"><span class="label">Github</span></a></li>
-								<li><a href="https://twitter.com/saini_pratyaksh" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="mailto:pratyaksh2000saini@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+								<li><a href="https://www.linkedin.com/in/dexterpuru/" target="_blank" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://github.com/dexterpuru" target="_blank" class="icon brands fa-github"><span class="label">Github</span></a></li>
+								<li><a href="https://twitter.com/saini_pratyaksh" target="_blank" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+								<li><a href="mailto:pratyaksh2000saini@gmail.com" target="_blank" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
 						</nav>
 					</header>
